...
    super.initState();
    _isLoggedIn = widget.initialLoggedIn;

    _discoveryService = DiscoveryService();

    _discoveryService.startDiscovery(
      deviceName: 'HomePC',
      deviceType: 'desktop',
      httpPort: widget.server.port,
    );

    _screens.addAll([
      PhotoBrowserScreen(desktopServer: widget.server),
...
